# classifier

./: pyproject.toml  setup.sh
classifier/: eda_utils.py  functions.py
notebooks/: credit_card_eda.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
