[tool.poetry]
name = "classifier"
version = "0.1.0"
description = ""
authors = ["jmwhittle <whittle462@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
xgboost = "^1.7.6"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"
imbalanced-learn = "^0.11.0"
ipykernel = "^6.25.2"
lightgbm = "^4.1.0"
catboost = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
